--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
+    ports:
+      - 3000:3000
     expose: 
       - 9000
     # command: composer install --ignore-platform-reqs && php artisan key:generate
@@ -65,3 +67,4 @@ services:
 
 networks:
   default:
+    driver: bridge
