--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,7 +4,7 @@ ARG user=user1
 ARG uid=1000
 
 RUN apt-get update
-RUN apt-get install -y libpng-dev libonig-dev libxml2-dev zip unzip curl
+RUN apt-get install -y libpng-dev libonig-dev libxml2-dev zip unzip curl npm default-mysql-client
 
 RUN docker-php-ext-install -j$(nproc) pdo_mysql mbstring exif pcntl bcmath gd
 RUN docker-php-ext-enable pdo_mysql
@@ -16,6 +16,5 @@ RUN mkdir -p /home/$user/.composer && \
 WORKDIR /var/www
 
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
-RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.0/install.sh | bash
 
 USER $user
