--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_NAME=CarParts
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
+APP_NAME=Laravel
+APP_ENV=production
+APP_KEY=base64:H1918HqHcONbUdh+keKvR3ZF3F2iqhY2MA87V2x6MKs=
+APP_DEBUG=false
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=car_parts
+DB_USERNAME=root
+DB_PASSWORD=root
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
