--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:H1918HqHcONbUdh+keKvR3ZF3F2iqhY2MA87V2x6MKs=
 APP_DEBUG=false
 APP_URL=http://localhost
